<resources>
    <string name="app_name">CLiK</string>
    <string name="feed">Feed</string>
    <string name="friends">Friends</string>
    <string name="search">Search</string>
    <string name="chat">Chat</string>
    <string name="setting">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="write_a_caption">Write A Caption</string>
    <string name="post">Post</string>
    <string name="posts">Posts</string>
    <string name="full_name">Full name</string>
    <string name="bio">Bio</string>
    <string name="name">Name</string>
    <string name="change_prof">"Change Profile "</string>
    <string name="change_email">Change Email</string>
    <string name="add_description_hashtag">Add Description, HashTag</string>
    <string name="add_a_image">Add a Image</string>
    <string name="open_camera">Open Camera</string>

    <!--    Intro slider string resources-->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">CliK that Pic!</string>
    <string name="slide_1_desc">The easiest way click photos and share it with friends!</string>

    <string name="slide_2_title">Jaa Kabutar Jaa</string>
    <string name="slide_2_desc">Start fun conversations with CliK Messages!</string>

    <string name="slide_3_title">Stories are here!</string>
    <string name="slide_3_desc">Need we say more?</string>

    <string name="slide_4_title">Vayam Rakshamah</string>
    <string name="slide_4_desc">We protect your data with the highest security standards.</string>
    <string name="followers">Folloewrs</string>
    <string name="follow">Follow</string>
    <string name="add_post_photos_here">Add Post and Photoes Here</string>
    <string name="logout">Logout</string>
    <string name="search_here">Search Here…</string>
    <string name="edit_profile">edit profile</string>
    <string name="likes">Likes</string>
    <string name="comments">Comments</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="continue1">continue</string>
    <string name="verify_mobile_number">Verify Mobile Number</string>
    <string name="enter">Enter the verification code we just sent to your mobile number.</string>
    <string name="resending">Code will be Resending in\t</string>
    <string name="delete">Delete Post</string>
    <string name="userprofile">Go To User Profile</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="title_activity_video">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="delete_comment">Delete Comment</string>
</resources>