<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent">

        <Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#8FABF4">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginEnd="15dp"
                    android:src="@drawable/ic_close_white" />

                <ImageView
                    android:id="@+id/save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="15dp"
                    android:src="@drawable/ic_check_white" />

            </RelativeLayout>


        </Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appbar2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                tools:ignore="ContentDescription"
                app:cardCornerRadius="75dp">
                <ImageView
                    android:id="@+id/profile_pic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    />
            </androidx.cardview.widget.CardView>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginBottom="10dp"
                android:layout_alignRight="@+id/card_view"
                android:layout_alignBottom="@+id/card_view"
                android:src="@drawable/ic_photo"
                android:elevation="5dp">

            </ImageView>

            <TextView
                android:id="@+id/name1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_view"
                android:layout_alignParentStart="true"
                android:layout_marginStart="26.5dp"
                android:layout_marginTop="80dp"
                android:gravity="top"
                android:text="@string/name"
                android:textAppearance="@style/username"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name1"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="22dp"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:focusable="true"
                android:focusableInTouchMode="true"/>

            <TextView
                android:id="@+id/name3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name1"
                android:layout_alignParentStart="true"
                android:layout_marginStart="26.5dp"
                android:layout_marginTop="90dp"
                android:gravity="top"
                android:text="@string/bio"
                android:textAppearance="@style/username"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name3"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="22dp"
                android:hint="@string/bio"
                android:inputType="text"
                android:focusable="true"
                android:focusableInTouchMode="true"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>