<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#8FABF4">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/username"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/profile_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_more_white" />


            </RelativeLayout>


        </Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/user_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appbar2"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            app:cardCornerRadius="40dp"
            android:layout_centerVertical="true"
            android:id="@+id/profile_pic1">

        <ImageView
            android:id="@+id/profile_pic"
            android:layout_width="80dp"
            android:layout_height="80dp"
             />

        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:layout_toEndOf="@+id/profile_pic1"
            >



            <RelativeLayout
                android:id="@+id/posts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center">
                <TextView

                    android:id="@+id/no_posts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:layout_centerHorizontal="true"
                    />

            <TextView
                android:id="@+id/text_posts"
                android:layout_below="@+id/no_posts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/posts"
                android:textAppearance="@style/username"
                android:textSize="15sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_toEndOf="@+id/posts"
                android:id="@+id/followers"
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content">

                <TextView
                    android:layout_centerHorizontal="true"
                    android:id="@+id/no_followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    />
            <TextView
                android:layout_below="@id/no_followers"
                android:id="@+id/text_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Followers"
                android:textAppearance="@style/username"
                android:textSize="15sp" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/followers"
                android:layout_width="wrap_content"
                >
                <TextView
                    android:id="@+id/no_following"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    />
            <TextView
                android:id="@+id/text_following"
                android:layout_below="@+id/no_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Following"
                android:textAppearance="@style/username"
                android:textSize="15sp" />

            </RelativeLayout>


        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/user_info1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_info">

        <TextView
            android:id="@+id/full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_alignParentStart="true"
            android:text="@string/full_name"
            android:textAppearance="@style/username"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/bio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/full_name"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:text="@string/bio"
            android:layout_marginStart="20dp"
            android:textAppearance="@style/username"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/editprofile"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@+id/bio"
            android:layout_marginStart="20dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_profile"

            android:text="edit profile"
            android:textSize="13sp"
            android:textStyle="bold" />


    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:paddingHorizontal="10dp"
        android:id="@+id/post_recycler"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/user_info1"></androidx.recyclerview.widget.RecyclerView>


</RelativeLayout>